# sequenza-utils-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
scripts/: benchmark_backend_binning_p8.sh  benchmark_bam_backend_matrix.sh  benchmark_htslib_thread_local.sh  benchmark_python_rust_parallel8.sh  benchmark_release_snapshot.sh  generate_parity_metrics.py  run_tests_limited.sh
src/: cli.rs  errors.rs  external_tools.rs  htslib_mpileup.rs  lib.rs  main.rs  pipeline.rs  seqz_core.rs  utils.rs  writer.rs
tests/: long_running_parallel.rs  mpileup_skip.rs  parity_golden.rs
