[package]
name = "bam2seqz_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
flate2 = { version = "1.1.9", features = ["zlib-rs"], default-features = false }
tempfile = "3"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
rayon = "1"
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }


[profile.dev]
incremental = true

[profile.release]
lto = 'thin'
debug = "line-tables-only"

[profile.debug-release]
inherits = "release"
debug = true

[profile.deploy]
inherits = "release"
lto = true
codegen-units = 1
debug = false