[package]
name = "sequenza-utils"
version = "0.1.4"
edition = "2024"
default-run = "bam2seqz"
autobins = false

[dependencies]
thiserror = "2"
flate2 = { version = "1.1.9", features = ["zlib-rs"], default-features = false }
tempfile = "3"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
rayon = "1"
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rust-htslib = { version = "1.0", features = ["libdeflate"], optional = true }
bio = { version = "2", optional = true }
mimalloc = { version = "0.1.48", features = ["secure"], optional = true }

[features]
default = ["mimalloc-allocator"]
mimalloc-allocator = ["dep:mimalloc"]
htslib-prototype = ["dep:rust-htslib", "dep:bio"]

[lib]
name = "sequenza_utils"
path = "src/lib.rs"

[[bin]]
name = "bam2seqz"
path = "src/bin/bam2seqz.rs"

[[bin]]
name = "synthetic_bam_fixture"
path = "src/bin/synthetic_bam_fixture.rs"

[[bin]]
name = "htslib_thread_local_bench"
path = "src/bin/htslib_thread_local_bench.rs"
required-features = ["htslib-prototype"]


[profile.dev]
incremental = true

[profile.release]
lto = 'thin'
debug = "line-tables-only"

[profile.debug-release]
inherits = "release"
debug = true

[profile.deploy]
inherits = "release"
lto = true
codegen-units = 1
debug = false
